fix: icons contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -128,7 +128,7 @@ nav ul li:hover {
 
 .socialImg {
     margin: 5px;
-    width: 20px;
+    width: 25px;
     cursor: pointer;
 }
 
